# cfe-fastapi-timescaledb

./: .env.compose  .gitignore  README.md  compose.yaml  data_science_template.md  pyproject.toml  railway.json  requirements.txt
nbs/: 01_verify-api-event-route.ipynb  01_work_notebook.ipynb  09_verify-api-event-route.ipynb  hello-world.ipynb
src/: main.py
src/api/db/: config.py  session.py
src/api/events/: models.py  routing.py  schemas.py
